Remove deprecated code